--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <link rel="stylesheet" href="dbclick.css">
 </head>
 <body>
-    <h1>Double Click Test</h1>
-    <h2>Click on the color below to test</h2>
-    <canvas id="canvas" height="50" onclick="test()"></canvas>
-    <p id="count"></p>
-    <textarea id="textarea"></textarea>
-    <p>
-        This will test if your mouse is double clicking. If the color turns red, 
-        a double click was detected and your mouse is probably broken.
-    </p>
+    <div id="testArea" class="testArea" onclick="test(event)">
+        <h1>Double Click Test</h1>
+        <h2>Click anywhere on the screen to test</h2>
+        <div class="results">
+            <p id="count"></p>
+            <textarea id="times" class="times"></textarea>
+            <p>
+                This will test if your mouse is double clicking on single clicks. If the color turns red, 
+                a double click was detected and your mouse is probably broken.
+            </p>
+        </div>
+    </div>
     <script src="dbclick.js"></script>
 </body>
 </html>
